# clariti-advanced-mri

./: .gitignore  README.md  pyproject.toml  review_followup.md  review_notes.md
.kiro/steering/: product-standards.md  structure-standards.md  tech-standards.md
ImageUploading/: .gitignore  README.md  fwImageUpload.py
ImageUploading/tests/: test_unit.py
QSMxT/: CheckinNote.docx  Dockerfile  README.md  manifest.json  run.py  ~$eckinNote.docx
